--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,8 +21,13 @@ jobs:
             args: '--target universal-apple-darwin'
           - platform: 'ubuntu-22.04'
             args: ''
+            pkg_config_path: ''
+          - platform: 'ubuntu-22.04'
+            args: '--target aarch64-unknown-linux-gnu'
+            pkg_config_path: '/usr/lib/aarch64-linux-gnu/pkgconfig'
           - platform: 'windows-latest'
             args: ''
+            pkg_config_path: ''
 
     runs-on: ${{ matrix.platform }}
 
@@ -30,18 +35,34 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install dependencies (Ubuntu only)
-        if: matrix.platform == 'ubuntu-22.04'
+      - name: Install dependencies (Linux x86_64)
+        if: matrix.platform == 'ubuntu-22.04' && matrix.args == ''
         run: |
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.1-dev build-essential curl wget file libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev patchelf pkg-config libsoup-3.0-dev javascriptcoregtk-4.1 libjavascriptcoregtk-4.1-dev
+
+      - name: Install dependencies (Linux ARM64)
+        if: matrix.platform == 'ubuntu-22.04' && contains(matrix.args, 'aarch64')
+        run: |
+          sudo dpkg --add-architecture arm64
+          sudo apt-get update
+          sudo apt-get install -y gcc-aarch64-linux-gnu
+          sudo apt-get install -y libwebkit2gtk-4.1-dev:arm64 build-essential curl wget file libssl-dev:arm64 libgtk-3-dev:arm64 libayatana-appindicator3-dev:arm64 librsvg2-dev:arm64 patchelf pkg-config libsoup-3.0-dev:arm64 javascriptcoregtk-4.1:arm64 libjavascriptcoregtk-4.1-dev:arm64
 
       - name: Rust setup
         uses: dtolnay/rust-toolchain@stable
         with:
           # Install both targets for macOS to allow cross-compilation and universal build
-          targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || '' }}
+          # And install Linux ARM target if needed
+          targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || (contains(matrix.args, 'aarch64') && 'aarch64-unknown-linux-gnu' || '') }}
 
+      - name: Configure Cargo for Cross Compilation (Linux ARM64)
+        if: contains(matrix.args, 'aarch64') && runner.os == 'Linux'
+        run: |
+          echo "PKG_CONFIG_PATH=${{ matrix.pkg_config_path }}" >> $GITHUB_ENV
+          echo "PKG_CONFIG_ALLOW_CROSS=1" >> $GITHUB_ENV
+          echo "CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=aarch64-linux-gnu-gcc" >> $GITHUB_ENV
+          
       - name: Node.js setup
         uses: actions/setup-node@v4
         with:
